ya boy still got it