@@ -1,5 +1,3 @@
-package LeetCodeAndUSACOProblems;
-
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -12,26 +10,25 @@ public class CodeForces1832B {
         for (int i = 0; i < t; i++) {
             int n = sc.nextInt();
             int k = sc.nextInt();
-            List<Integer> nums = new ArrayList<>();
+            List<Long> nums = new ArrayList<>();
             for (int j = 0; j < n; j++) {
-                nums.add(sc.nextInt());
+                nums.add(sc.nextLong());
             }
-            Collections.sort(nums);
-            for (int m = 0; m < k; m++) {
-                int x1 = nums.get(0);
-                int x2 = nums.get(1);
-                int x = x1 + x2;
-                if (x > nums.getLast()) {
-                    nums.remove(Integer.valueOf(nums.getLast()));
+            List<Long> copy = new ArrayList<>(nums);
+            Collections.sort(copy);
+            for (int j = 0; j < k; j++) {
+                //get 2 mins
+                long min1 = copy.get(0);
+                long min2 = copy.get(1);
+                if (min1 + min2 > copy.get(copy.size() - 1)) {
+                    copy.remove(copy.size() - 1);
                 } else {
-                    nums.remove(Integer.valueOf(x1));
-                    nums.remove(Integer.valueOf(x2));
+                    copy.remove(0);
+                    copy.remove(0);
                 }
             }
-            int sum = 0;
-            for (int v = 0; v < nums.size(); v++) {
-                sum += nums.get(v);
-            }
+            long sum = 0;
+            for (long x : copy) sum += x;
             System.out.println(sum);
         }
     }
